test/types/enum/nonParamEnum.good
nonParamEnum.chpl:1: error: enumerator 'red' is not an integer param value
